Fixed colors where collapsed menu would show invisible links

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,7 +7,7 @@ $primary-color: $background-color;
 $primary-text-color: $text-color;
 
 $secondary-color: #004000 !default;
-$secondary-text-color: #fff !default;
+$secondary-text-color: #0c0 !default;
 
 // Between primiary and seconday color.
 
@@ -16,12 +16,12 @@ $transition-text-color: #444 !default;
 
 // Additional
 
-// .dev-warning {
-//     background-color: #FFBA73;
-//     text-align: center;
-//     color: $primary-text-color;
-// }
-// 
+.dev-warning {
+    background-color: #FFBA73;
+    text-align: center;
+    color: $primary-text-color;
+}
+ 
 header.site-header {
     border-bottom: 0;
 }
@@ -49,19 +49,19 @@ a.site-title img {
     height: 1.5em;
 }
 
-// .center-text {
-//     text-align: center;
-// }
-// 
-// .center-image {
-//     margin: 0 auto;
-//     display: block;
-// }
-// 
-// .round-corners {
-//     border-radius: 20px;
-// }
-// 
+.center-text {
+    text-align: center;
+}
+
+.center-image {
+    margin: 0 auto;
+    display: block;
+}
+
+.round-corners {
+    border-radius: 20px;
+}
+
 .simple-footer {
     display: flex;
     justify-content: space-between;
